--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-ivan",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "game for brain by ivan",
   "main": "dist/bin/brain-games.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "eslint": "eslint"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "repository": {
     "type": "git",
