--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-ivan",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "game for brain by ivan",
   "main": "dist/bin/brain-games.js",
   "scripts": {
@@ -11,7 +11,8 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "repository": {
     "type": "git",
