--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-ivan",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "game for brain by ivan",
   "main": "dist/bin/brain-games.js",
   "scripts": {
@@ -12,7 +12,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "repository": {
     "type": "git",
