--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-ivan",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "game for brain by ivan",
   "main": "dist/bin/brain-games.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "games"
   ],
   "author": "Ivan Grigorev",
-  "license": "UNLICENSED",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/HardAndHeavy/brain-games/issues"
   },
