--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "brain-games-ivan",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "game for brain by ivan",
   "main": "dist/bin/brain-games.js",
   "scripts": {
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "eslint": "eslint"
   },
   "bin": {
