--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,10 @@
+plugins:
+  - babel
 
 env:
   node: true
 
 parser: babel-eslint
-
-parserOptions:
-  ecmaVersion: 2017
-  sourceType: module
 
 extends:
   - 'airbnb-base'
